cdap-ui/app/cdap/components/Overview/OverviewMetaSection/OverviewMetaSection.scss
/*
 * Copyright © 2017 Cask Data, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not
 * use this file except in compliance with the License. You may obtain a copy of
 * the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 * License for the specific language governing permissions and limitations under
 * the License.
 */

@import '../../../styles/variables.scss';

.overview-meta-section {
  background: white;
  padding: 10px 16px 10px 16px;

  > div {
    margin-top: 8px;
  }

  h2 {
    color: rgba(51, 51, 51, 1);
  }
  .fast-actions-container {
    display: flex;
    justify-content: space-between;
    align-items: center;

    .btn-group {
      .dropdown-toggle {
        font-weight: bold;
        color: rgba(102, 102, 102, 1);
        font-size: 12px;
        border-color: rgba(219, 219, 219, 1);
      }
    }
    small {
      &:not(:only-child) {
        margin-left: 10px;
      }
      time {
        margin-left: 5px;
      }
      font-size: 10px;
      color: rgba(102, 102, 102, 1);
    }
    .overview-fast-actions {
      border: 1px solid rgba(219, 219, 219, 1);
      margin: 0;
      border-radius: 4px;

      > span {
        &:last-child {
          .btn.btn-link {
            border-right: 0;
          }
        }
      }
      .btn.btn-link {
        text-decoration: none;
        font-size: 13px;
        color: #4f5050;
        padding: 0;
        vertical-align: top;
        border-right: 1px solid rgba(219, 219, 219, 1);

        &:hover {
          background-color: $cdap-gray;
        }

        [class*="fa"] {
          padding: 8px 19px;
        }
      }
    }
  }
  .entity-info {
    span {
      font-weight: bold;
      color: rgba(102, 102, 102, 1);
    }
  }
  .tags-holder {
    .tag-input {
      padding-bottom: 7px;
      vertical-align: middle;
    }
  }
}

